// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clientData is falsy 1`] = `
<AdminClientView
  adminDispatch={[Function]}
  clientData={null}
  clientsDispatch={
    Object {
      "clearMarginsList": [Function],
      "createCompany": [Function],
      "createGroup": [Function],
      "createMargin": [Function],
      "deleteCompany": [Function],
      "deleteGroup": [Function],
      "deleteMargin": [Function],
      "editCompanyEmployees": [Function],
      "editGroupMembers": [Function],
      "editMemberships": [Function],
      "fetchTargetScope": [Function],
      "getClientsForList": [Function],
      "getCompaniesForList": [Function],
      "getFinerMarginDetails": [Function],
      "getGroupsAndMargins": [Function],
      "getGroupsForList": [Function],
      "getLocalChargesForList": [Function],
      "getMarginFormData": [Function],
      "getMarginsForList": [Function],
      "goTo": [Function],
      "logOut": [Function],
      "membershipData": [Function],
      "newMarginFromGroup": [Function],
      "removeClient": [Function],
      "removeLocalCharge": [Function],
      "testMargins": [Function],
      "updateGroupUsers": [Function],
      "updateMarginValues": [Function],
      "viewClient": [Function],
      "viewCompany": [Function],
      "viewGroup": [Function],
    }
  }
  groups={Array []}
  handleClick={[Function]}
  hubs={
    Array [
      Object {
        "address": Object {
          "city": "FOO_CITY",
          "country": "Germany",
          "geocodedAddress": "FOO_GEOCODED_ADDRESS",
          "id": 246,
          "primary": true,
          "street": "FOO_STREET",
          "streetNumber": 579,
          "street_number": 579,
          "zipCode": "22456",
          "zip_code": "22456",
        },
        "name": "FOO_HUB_NAME",
      },
    ]
  }
  managers={
    Array [
      Object {
        "first_name": "MANAGER_FIRST_NAME",
        "id": 7,
        "last_name": "MANAGER_LAST_NAME",
        "section": "FOO_SECTION",
      },
    ]
  }
  store={
    Object {
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "getState": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": undefined,
    }
  }
  t={[Function]}
  theme={Object {}}
  user={
    Object {
      "company_name": "FOO_COMPANY",
      "currency": "EUR",
      "email": "foo@bar.baz",
      "first_name": "John",
      "guest": false,
      "last_name": "Doe",
      "phone": "6345789",
      "role": Object {
        "name": "shipper",
      },
    }
  }
/>
`;

exports[`clientData.managerAssignments is falsy 1`] = `
<AdminClientView
  adminDispatch={[Function]}
  clientData={
    Object {
      "addresses": Array [
        Object {},
      ],
      "client": Object {
        "company_name": "Mehristweniger",
        "email": "muller55@yahoo.de",
        "first_name": "Sebastian",
        "last_name": "Muller",
        "password": "pwd",
      },
      "locations": Array [
        undefined,
      ],
      "managerAssignments": null,
      "shipments": Array [
        Object {},
      ],
    }
  }
  clientsDispatch={
    Object {
      "clearMarginsList": [Function],
      "createCompany": [Function],
      "createGroup": [Function],
      "createMargin": [Function],
      "deleteCompany": [Function],
      "deleteGroup": [Function],
      "deleteMargin": [Function],
      "editCompanyEmployees": [Function],
      "editGroupMembers": [Function],
      "editMemberships": [Function],
      "fetchTargetScope": [Function],
      "getClientsForList": [Function],
      "getCompaniesForList": [Function],
      "getFinerMarginDetails": [Function],
      "getGroupsAndMargins": [Function],
      "getGroupsForList": [Function],
      "getLocalChargesForList": [Function],
      "getMarginFormData": [Function],
      "getMarginsForList": [Function],
      "goTo": [Function],
      "logOut": [Function],
      "membershipData": [Function],
      "newMarginFromGroup": [Function],
      "removeClient": [Function],
      "removeLocalCharge": [Function],
      "testMargins": [Function],
      "updateGroupUsers": [Function],
      "updateMarginValues": [Function],
      "viewClient": [Function],
      "viewCompany": [Function],
      "viewGroup": [Function],
    }
  }
  groups={Array []}
  handleClick={[Function]}
  hubs={
    Array [
      Object {
        "address": Object {
          "city": "FOO_CITY",
          "country": "Germany",
          "geocodedAddress": "FOO_GEOCODED_ADDRESS",
          "id": 246,
          "primary": true,
          "street": "FOO_STREET",
          "streetNumber": 579,
          "street_number": 579,
          "zipCode": "22456",
          "zip_code": "22456",
        },
        "name": "FOO_HUB_NAME",
      },
    ]
  }
  managers={
    Array [
      Object {
        "first_name": "MANAGER_FIRST_NAME",
        "id": 7,
        "last_name": "MANAGER_LAST_NAME",
        "section": "FOO_SECTION",
      },
    ]
  }
  store={
    Object {
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "getState": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": undefined,
    }
  }
  t={[Function]}
  theme={Object {}}
  user={
    Object {
      "company_name": "FOO_COMPANY",
      "currency": "EUR",
      "email": "foo@bar.baz",
      "first_name": "John",
      "guest": false,
      "last_name": "Doe",
      "phone": "6345789",
      "role": Object {
        "name": "shipper",
      },
    }
  }
/>
`;

exports[`managerAssignments is truthy 1`] = `
<AdminClientView
  adminDispatch={[Function]}
  clientData={
    Object {
      "addresses": Array [
        Object {},
      ],
      "client": Object {
        "company_name": "Mehristweniger",
        "email": "muller55@yahoo.de",
        "first_name": "Sebastian",
        "last_name": "Muller",
        "password": "pwd",
      },
      "locations": Array [
        undefined,
      ],
      "managerAssignments": Array [
        Object {
          "manager_id": 7,
          "section": "BAZ_SECTION",
        },
      ],
      "shipments": Array [
        Object {},
      ],
    }
  }
  clientsDispatch={
    Object {
      "clearMarginsList": [Function],
      "createCompany": [Function],
      "createGroup": [Function],
      "createMargin": [Function],
      "deleteCompany": [Function],
      "deleteGroup": [Function],
      "deleteMargin": [Function],
      "editCompanyEmployees": [Function],
      "editGroupMembers": [Function],
      "editMemberships": [Function],
      "fetchTargetScope": [Function],
      "getClientsForList": [Function],
      "getCompaniesForList": [Function],
      "getFinerMarginDetails": [Function],
      "getGroupsAndMargins": [Function],
      "getGroupsForList": [Function],
      "getLocalChargesForList": [Function],
      "getMarginFormData": [Function],
      "getMarginsForList": [Function],
      "goTo": [Function],
      "logOut": [Function],
      "membershipData": [Function],
      "newMarginFromGroup": [Function],
      "removeClient": [Function],
      "removeLocalCharge": [Function],
      "testMargins": [Function],
      "updateGroupUsers": [Function],
      "updateMarginValues": [Function],
      "viewClient": [Function],
      "viewCompany": [Function],
      "viewGroup": [Function],
    }
  }
  groups={Array []}
  handleClick={[Function]}
  hubs={
    Array [
      Object {
        "address": Object {
          "city": "FOO_CITY",
          "country": "Germany",
          "geocodedAddress": "FOO_GEOCODED_ADDRESS",
          "id": 246,
          "primary": true,
          "street": "FOO_STREET",
          "streetNumber": 579,
          "street_number": 579,
          "zipCode": "22456",
          "zip_code": "22456",
        },
        "name": "FOO_HUB_NAME",
      },
    ]
  }
  managers={
    Array [
      Object {
        "first_name": "MANAGER_FIRST_NAME",
        "id": 7,
        "last_name": "MANAGER_LAST_NAME",
        "section": "FOO_SECTION",
      },
    ]
  }
  store={
    Object {
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "getState": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": undefined,
    }
  }
  t={[Function]}
  theme={Object {}}
  user={
    Object {
      "company_name": "FOO_COMPANY",
      "currency": "EUR",
      "email": "foo@bar.baz",
      "first_name": "John",
      "guest": false,
      "last_name": "Doe",
      "phone": "6345789",
      "role": Object {
        "name": "shipper",
      },
    }
  }
/>
`;

exports[`managers is falsy 1`] = `
<AdminClientView
  adminDispatch={[Function]}
  clientData={
    Object {
      "addresses": Array [
        Object {},
      ],
      "client": Object {
        "company_name": "Mehristweniger",
        "email": "muller55@yahoo.de",
        "first_name": "Sebastian",
        "last_name": "Muller",
        "password": "pwd",
      },
      "locations": Array [
        undefined,
      ],
      "managerAssignments": Array [],
      "shipments": Array [
        Object {},
      ],
    }
  }
  clientsDispatch={
    Object {
      "clearMarginsList": [Function],
      "createCompany": [Function],
      "createGroup": [Function],
      "createMargin": [Function],
      "deleteCompany": [Function],
      "deleteGroup": [Function],
      "deleteMargin": [Function],
      "editCompanyEmployees": [Function],
      "editGroupMembers": [Function],
      "editMemberships": [Function],
      "fetchTargetScope": [Function],
      "getClientsForList": [Function],
      "getCompaniesForList": [Function],
      "getFinerMarginDetails": [Function],
      "getGroupsAndMargins": [Function],
      "getGroupsForList": [Function],
      "getLocalChargesForList": [Function],
      "getMarginFormData": [Function],
      "getMarginsForList": [Function],
      "goTo": [Function],
      "logOut": [Function],
      "membershipData": [Function],
      "newMarginFromGroup": [Function],
      "removeClient": [Function],
      "removeLocalCharge": [Function],
      "testMargins": [Function],
      "updateGroupUsers": [Function],
      "updateMarginValues": [Function],
      "viewClient": [Function],
      "viewCompany": [Function],
      "viewGroup": [Function],
    }
  }
  groups={Array []}
  handleClick={[Function]}
  hubs={
    Array [
      Object {
        "address": Object {
          "city": "FOO_CITY",
          "country": "Germany",
          "geocodedAddress": "FOO_GEOCODED_ADDRESS",
          "id": 246,
          "primary": true,
          "street": "FOO_STREET",
          "streetNumber": 579,
          "street_number": 579,
          "zipCode": "22456",
          "zip_code": "22456",
        },
        "name": "FOO_HUB_NAME",
      },
    ]
  }
  managers={Array []}
  store={
    Object {
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "getState": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": undefined,
    }
  }
  t={[Function]}
  theme={Object {}}
  user={
    Object {
      "company_name": "FOO_COMPANY",
      "currency": "EUR",
      "email": "foo@bar.baz",
      "first_name": "John",
      "guest": false,
      "last_name": "Doe",
      "phone": "6345789",
      "role": Object {
        "name": "shipper",
      },
    }
  }
/>
`;

exports[`shallow render 1`] = `
<AdminClientView
  adminDispatch={[Function]}
  clientData={
    Object {
      "addresses": Array [
        Object {},
      ],
      "client": Object {
        "company_name": "Mehristweniger",
        "email": "muller55@yahoo.de",
        "first_name": "Sebastian",
        "last_name": "Muller",
        "password": "pwd",
      },
      "locations": Array [
        undefined,
      ],
      "managerAssignments": Array [],
      "shipments": Array [
        Object {},
      ],
    }
  }
  clientsDispatch={
    Object {
      "clearMarginsList": [Function],
      "createCompany": [Function],
      "createGroup": [Function],
      "createMargin": [Function],
      "deleteCompany": [Function],
      "deleteGroup": [Function],
      "deleteMargin": [Function],
      "editCompanyEmployees": [Function],
      "editGroupMembers": [Function],
      "editMemberships": [Function],
      "fetchTargetScope": [Function],
      "getClientsForList": [Function],
      "getCompaniesForList": [Function],
      "getFinerMarginDetails": [Function],
      "getGroupsAndMargins": [Function],
      "getGroupsForList": [Function],
      "getLocalChargesForList": [Function],
      "getMarginFormData": [Function],
      "getMarginsForList": [Function],
      "goTo": [Function],
      "logOut": [Function],
      "membershipData": [Function],
      "newMarginFromGroup": [Function],
      "removeClient": [Function],
      "removeLocalCharge": [Function],
      "testMargins": [Function],
      "updateGroupUsers": [Function],
      "updateMarginValues": [Function],
      "viewClient": [Function],
      "viewCompany": [Function],
      "viewGroup": [Function],
    }
  }
  groups={Array []}
  handleClick={[Function]}
  hubs={
    Array [
      Object {
        "address": Object {
          "city": "FOO_CITY",
          "country": "Germany",
          "geocodedAddress": "FOO_GEOCODED_ADDRESS",
          "id": 246,
          "primary": true,
          "street": "FOO_STREET",
          "streetNumber": 579,
          "street_number": 579,
          "zipCode": "22456",
          "zip_code": "22456",
        },
        "name": "FOO_HUB_NAME",
      },
    ]
  }
  managers={
    Array [
      Object {
        "first_name": "MANAGER_FIRST_NAME",
        "id": 7,
        "last_name": "MANAGER_LAST_NAME",
        "section": "FOO_SECTION",
      },
    ]
  }
  store={
    Object {
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "getState": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": undefined,
    }
  }
  t={[Function]}
  theme={Object {}}
  user={
    Object {
      "company_name": "FOO_COMPANY",
      "currency": "EUR",
      "email": "foo@bar.baz",
      "first_name": "John",
      "guest": false,
      "last_name": "Doe",
      "phone": "6345789",
      "role": Object {
        "name": "shipper",
      },
    }
  }
/>
`;

exports[`state.confirm is true 1`] = `
<AdminClientView
  adminDispatch={[Function]}
  clientData={
    Object {
      "addresses": Array [
        Object {},
      ],
      "client": Object {
        "company_name": "Mehristweniger",
        "email": "muller55@yahoo.de",
        "first_name": "Sebastian",
        "last_name": "Muller",
        "password": "pwd",
      },
      "locations": Array [
        undefined,
      ],
      "managerAssignments": Array [],
      "shipments": Array [
        Object {},
      ],
    }
  }
  clientsDispatch={
    Object {
      "clearMarginsList": [Function],
      "createCompany": [Function],
      "createGroup": [Function],
      "createMargin": [Function],
      "deleteCompany": [Function],
      "deleteGroup": [Function],
      "deleteMargin": [Function],
      "editCompanyEmployees": [Function],
      "editGroupMembers": [Function],
      "editMemberships": [Function],
      "fetchTargetScope": [Function],
      "getClientsForList": [Function],
      "getCompaniesForList": [Function],
      "getFinerMarginDetails": [Function],
      "getGroupsAndMargins": [Function],
      "getGroupsForList": [Function],
      "getLocalChargesForList": [Function],
      "getMarginFormData": [Function],
      "getMarginsForList": [Function],
      "goTo": [Function],
      "logOut": [Function],
      "membershipData": [Function],
      "newMarginFromGroup": [Function],
      "removeClient": [Function],
      "removeLocalCharge": [Function],
      "testMargins": [Function],
      "updateGroupUsers": [Function],
      "updateMarginValues": [Function],
      "viewClient": [Function],
      "viewCompany": [Function],
      "viewGroup": [Function],
    }
  }
  groups={Array []}
  handleClick={[Function]}
  hubs={
    Array [
      Object {
        "address": Object {
          "city": "FOO_CITY",
          "country": "Germany",
          "geocodedAddress": "FOO_GEOCODED_ADDRESS",
          "id": 246,
          "primary": true,
          "street": "FOO_STREET",
          "streetNumber": 579,
          "street_number": 579,
          "zipCode": "22456",
          "zip_code": "22456",
        },
        "name": "FOO_HUB_NAME",
      },
    ]
  }
  managers={
    Array [
      Object {
        "first_name": "MANAGER_FIRST_NAME",
        "id": 7,
        "last_name": "MANAGER_LAST_NAME",
        "section": "FOO_SECTION",
      },
    ]
  }
  store={
    Object {
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "getState": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": undefined,
    }
  }
  t={[Function]}
  theme={Object {}}
  user={
    Object {
      "company_name": "FOO_COMPANY",
      "currency": "EUR",
      "email": "foo@bar.baz",
      "first_name": "John",
      "guest": false,
      "last_name": "Doe",
      "phone": "6345789",
      "role": Object {
        "name": "shipper",
      },
    }
  }
/>
`;

exports[`state.showAddManager is true 1`] = `
<AdminClientView
  adminDispatch={[Function]}
  clientData={
    Object {
      "addresses": Array [
        Object {},
      ],
      "client": Object {
        "company_name": "Mehristweniger",
        "email": "muller55@yahoo.de",
        "first_name": "Sebastian",
        "last_name": "Muller",
        "password": "pwd",
      },
      "locations": Array [
        undefined,
      ],
      "managerAssignments": Array [
        Object {
          "manager_id": 7,
          "section": "BAZ_SECTION",
        },
      ],
      "shipments": Array [
        Object {},
      ],
    }
  }
  clientsDispatch={
    Object {
      "clearMarginsList": [Function],
      "createCompany": [Function],
      "createGroup": [Function],
      "createMargin": [Function],
      "deleteCompany": [Function],
      "deleteGroup": [Function],
      "deleteMargin": [Function],
      "editCompanyEmployees": [Function],
      "editGroupMembers": [Function],
      "editMemberships": [Function],
      "fetchTargetScope": [Function],
      "getClientsForList": [Function],
      "getCompaniesForList": [Function],
      "getFinerMarginDetails": [Function],
      "getGroupsAndMargins": [Function],
      "getGroupsForList": [Function],
      "getLocalChargesForList": [Function],
      "getMarginFormData": [Function],
      "getMarginsForList": [Function],
      "goTo": [Function],
      "logOut": [Function],
      "membershipData": [Function],
      "newMarginFromGroup": [Function],
      "removeClient": [Function],
      "removeLocalCharge": [Function],
      "testMargins": [Function],
      "updateGroupUsers": [Function],
      "updateMarginValues": [Function],
      "viewClient": [Function],
      "viewCompany": [Function],
      "viewGroup": [Function],
    }
  }
  groups={Array []}
  handleClick={[Function]}
  hubs={
    Array [
      Object {
        "address": Object {
          "city": "FOO_CITY",
          "country": "Germany",
          "geocodedAddress": "FOO_GEOCODED_ADDRESS",
          "id": 246,
          "primary": true,
          "street": "FOO_STREET",
          "streetNumber": 579,
          "street_number": 579,
          "zipCode": "22456",
          "zip_code": "22456",
        },
        "name": "FOO_HUB_NAME",
      },
    ]
  }
  managers={
    Array [
      Object {
        "first_name": "MANAGER_FIRST_NAME",
        "id": 7,
        "last_name": "MANAGER_LAST_NAME",
        "section": "FOO_SECTION",
      },
    ]
  }
  store={
    Object {
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "getState": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": undefined,
    }
  }
  t={[Function]}
  theme={Object {}}
  user={
    Object {
      "company_name": "FOO_COMPANY",
      "currency": "EUR",
      "email": "foo@bar.baz",
      "first_name": "John",
      "guest": false,
      "last_name": "Doe",
      "phone": "6345789",
      "role": Object {
        "name": "shipper",
      },
    }
  }
/>
`;

exports[`theme is falsy 1`] = `
<AdminClientView
  adminDispatch={[Function]}
  clientData={
    Object {
      "addresses": Array [
        Object {},
      ],
      "client": Object {
        "company_name": "Mehristweniger",
        "email": "muller55@yahoo.de",
        "first_name": "Sebastian",
        "last_name": "Muller",
        "password": "pwd",
      },
      "locations": Array [
        undefined,
      ],
      "managerAssignments": Array [],
      "shipments": Array [
        Object {},
      ],
    }
  }
  clientsDispatch={
    Object {
      "clearMarginsList": [Function],
      "createCompany": [Function],
      "createGroup": [Function],
      "createMargin": [Function],
      "deleteCompany": [Function],
      "deleteGroup": [Function],
      "deleteMargin": [Function],
      "editCompanyEmployees": [Function],
      "editGroupMembers": [Function],
      "editMemberships": [Function],
      "fetchTargetScope": [Function],
      "getClientsForList": [Function],
      "getCompaniesForList": [Function],
      "getFinerMarginDetails": [Function],
      "getGroupsAndMargins": [Function],
      "getGroupsForList": [Function],
      "getLocalChargesForList": [Function],
      "getMarginFormData": [Function],
      "getMarginsForList": [Function],
      "goTo": [Function],
      "logOut": [Function],
      "membershipData": [Function],
      "newMarginFromGroup": [Function],
      "removeClient": [Function],
      "removeLocalCharge": [Function],
      "testMargins": [Function],
      "updateGroupUsers": [Function],
      "updateMarginValues": [Function],
      "viewClient": [Function],
      "viewCompany": [Function],
      "viewGroup": [Function],
    }
  }
  groups={Array []}
  handleClick={[Function]}
  hubs={
    Array [
      Object {
        "address": Object {
          "city": "FOO_CITY",
          "country": "Germany",
          "geocodedAddress": "FOO_GEOCODED_ADDRESS",
          "id": 246,
          "primary": true,
          "street": "FOO_STREET",
          "streetNumber": 579,
          "street_number": 579,
          "zipCode": "22456",
          "zip_code": "22456",
        },
        "name": "FOO_HUB_NAME",
      },
    ]
  }
  managers={
    Array [
      Object {
        "first_name": "MANAGER_FIRST_NAME",
        "id": 7,
        "last_name": "MANAGER_LAST_NAME",
        "section": "FOO_SECTION",
      },
    ]
  }
  store={
    Object {
      "getState": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "getState": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": undefined,
    }
  }
  t={[Function]}
  theme={Object {}}
  user={
    Object {
      "company_name": "FOO_COMPANY",
      "currency": "EUR",
      "email": "foo@bar.baz",
      "first_name": "John",
      "guest": false,
      "last_name": "Doe",
      "phone": "6345789",
      "role": Object {
        "name": "shipper",
      },
    }
  }
/>
`;
